virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: server-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - server-gateway
  http:
    - match:
        - uri:
            exact: "/"
      route:
        - destination:
            host: server-service
            port:
              number: 80
    - match:
        - uri:
            exact: "/status"
      route:
        - destination:
            host: server-service
            port:
              number: 80
    - match:
        - uri:
            exact: "/logs"
      route:
        - destination:
            host: server-service
            port:
              number: 80
    - match:
        - uri:
            exact: "/log"
      fault:
        delay:
          percentage:
            value: 100
          fixedDelay: 2s
      timeout: 1s
      retries:
        attempts: 2
      route:
        - destination:
            host: server-service
            port:
              number: 80
    - directResponse:
        status: 404
        body:
          string: "404 Not Found"
